[package]
name = "aoc_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
bitmaps = "3.2.0"
derive_more = "0.99.17"
itertools = "0.10.5"

[profile.dev]
opt-level = 3
